--- a/Code/ECMonitoring/Content/Ecm/main.css
+++ b/Code/ECMonitoring/Content/Ecm/main.css
@@ -171,7 +171,7 @@ li a:hover:not(.mnu_active) {
 .left_bar {
     background-color: #F7F7FD; /*#F5F5FD;*/ /*#F8F8FD;*/
     border: 1px solid #C8C8DC; /*#DCDCF0;*/ /*#E1E1F6;*/
-    /*height: 100%;*/
+    height: 100%;
     overflow-y: auto;
     padding-top: 15px;
     /*z-index: 500;*/
