--- a/Code/Final/ECMonitoring/ECMonitoring/Views/Shared/_EcmLayout.cshtml
+++ b/Code/Final/ECMonitoring/ECMonitoring/Views/Shared/_EcmLayout.cshtml
@@ -5,10 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    @*<meta http-equiv="pragma" content="no-cache">*@
     <title>ECM Monitor</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <link rel="stylesheet" href="~/Content/Ecm/main.css?v=16" />
+    <link rel="stylesheet" href="~/Content/Ecm/main.css?v=17" />
 </head>
 
 <body>
