--- a/Code/Final/ECMonitoring/ECMonitoring/Views/ECM/ResourceUsageMetric.cshtml
+++ b/Code/Final/ECMonitoring/ECMonitoring/Views/ECM/ResourceUsageMetric.cshtml
@@ -2,10 +2,10 @@
 
 <div class="end_point_resource_usage_container">
     <div class="end_point_resource_usage_label">Загрузка ЦП:</div>
-    <div class="end_point_resource_usage_value" id="processorTime_@Model.Id">@($"{Model.ProcessorTime.ToString()}%")</div>
+    <div class="end_point_resource_usage_value" id="processorTime_@Model.Id">@($"{Model.GetProcessorTimeValue()}")</div>
 </div>
 <div class="end_poiny_info_separator"></div>
 <div class="end_point_resource_usage_container">
     <div class="end_point_resource_usage_label">Физическая память:</div>
-    <div class="end_point_resource_usage_value" id="memoryUsage_@Model.Id">@($"{Model.MemoryUsage}%")</div>
+    <div class="end_point_resource_usage_value" id="memoryUsage_@Model.Id">@($"{Model.GetMemoryUsageValue()}")</div>
 </div>
